# SampleRepoCPPcourses

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
customlibraries/: readme.md
data/: Readme.md
gameobjects/: Ball.cpp  Ball.h  Menu.cpp  Menu.h  Paddle.cpp  Paddle.h  Wall.cpp  Wall.h  readme.md
libs/: readme.md
libs/SFML-2.5.1/extlibs/headers/AL/: al.h
libs/SFML-2.5.1/extlibs/headers/FLAC/: stream_encoder.h
libs/SFML-2.5.1/extlibs/headers/freetype2/: freetype.h  ftbdf.h  ftcache.h
